benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-mix006_tso.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix006_tso.oepc.yml/mix006_tso.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix006_tso.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_q1w7froy/tmp/tmpcmv5sls8.c
Compilation started
/tmp/BenchExec_run_q1w7froy/tmp/tmpcmv5sls8.c: In function ‘P1’:
/tmp/BenchExec_run_q1w7froy/tmp/tmpcmv5sls8.c:618:19: error: ‘FALSE’ undeclared (first use in this function)
  618 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_q1w7froy/tmp/tmpcmv5sls8.c:618:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_q1w7froy/tmp/tmpcmv5sls8.c: In function ‘P2’:
/tmp/BenchExec_run_q1w7froy/tmp/tmpcmv5sls8.c:679:19: error: ‘FALSE’ undeclared (first use in this function)
  679 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_q1w7froy/tmp/tmpcmv5sls8.c:680:19: error: ‘TRUE’ undeclared (first use in this function)
  680 |   weak$$choice2 = TRUE;;
      |                   ^~~~
/tmp/BenchExec_run_q1w7froy/tmp/tmpcmv5sls8.c: In function ‘main’:
/tmp/BenchExec_run_q1w7froy/tmp/tmpcmv5sls8.c:764:19: error: ‘FALSE’ undeclared (first use in this function)
  764 |   weak$$choice0 = FALSE;;
      |                   ^~~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
